--- a/7 - Nesne Tabanlı Programlama/siniflar.ipynb
+++ b/7 - Nesne Tabanlı Programlama/siniflar.ipynb
@@ -195,10 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "source": [
     "class Araba():\r\n",
-    "    def _init_(self,model,beygir_gucu,silindir,kapi_sayisi): #parametrelerin değerlerini objelerimizi oluştururken göndereceğiz\r\n",
+    "\r\n",
+    "    def __init__(self,model,beygir_gucu,silindir,kapi_sayisi): #parametrelerin değerlerini objelerimizi oluştururken göndereceğiz\r\n",
     "        self.model = model #self.özellik_ismi = parametre değeri şeklinde objemizin model özelliğine değeri atıyoruz.\r\n",
     "        self.beygir_gucu = beygir_gucu\r\n",
     "        self.silindir = silindir\r\n",
@@ -209,21 +210,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "source": [
     "#Artık değerlerimizi göndererek objelerimizin özelliklerini istediğimiz değerle başlatabiliriz.\r\n",
-    "araba4 = Araba(\"Renault Symbol\",90,4,5) \r\n"
+    "araba4 = Araba(\"Renault Symbol\",90,4,5) \r\n",
+    "araba2 = Araba(\"Fiat Egea\", 90,4,5)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "print(araba4.model)\r\n",
+    "print(araba2.model)"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "Araba() takes no arguments",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\TAHASL~1\\AppData\\Local\\Temp/ipykernel_12412/744686305.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Artık değerlerimizi göndererek objelerimizin özelliklerini istediğimiz değerle başlatabiliriz.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0maraba4\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAraba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Renault Symbol\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m90\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: Araba() takes no arguments"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Renault Symbol\n",
+      "Fiat Egea\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "class Car():\r\n",
+    "\r\n",
+    "    def __init__(self, model = \"Bilgi yok\", renk = \"Bilgi yok\", silindir = 4, beygir_gucu = 90):\r\n",
+    "        self.model = model\r\n",
+    "        self.renk = renk\r\n",
+    "        self.silindir = silindir\r\n",
+    "        self.beygir_gucu = beygir_gucu"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "araba5 = Araba(model = \"Renault Taliant\", renk = \"Kahverengi\", beygir_gucu = 85) #parantez içerisinde virgüllerden sonra 1 boşluk bırak"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "source": [
+    "print(\" Model = {}\\n Renk = {}\\n Silindir Sayısı = {}\\n Beygir Gücü(hp) = {}\\n\".format(araba5.model,araba5.renk,araba5.silindir,araba5.beygir_gucu))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      " Model = Renault Taliant\n",
+      " Renk = Kahverengi\n",
+      " Silindir Sayısı = 4\n",
+      " Beygir Gücü(hp) = 85\n",
+      "\n"
      ]
     }
    ],
