--- a/7 - Nesne Tabanlı Programlama/kalitim(inheritance).ipynb
+++ b/7 - Nesne Tabanlı Programlama/kalitim(inheritance).ipynb
@@ -188,8 +188,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "class Calisan():\r\n",
+    "    def __init__(self,isim,maas,departman):\r\n",
+    "        print(\"Calisan sınıfının init fonksiyonu.\")\r\n",
+    "        self.isim = isim\r\n",
+    "        self.maas = maas\r\n",
+    "        self.departman = departman\r\n",
+    "\r\n",
+    "    def bilgilerigoster(self):\r\n",
+    "        print(\"----Çalışan sınıfının bilgileri----\")\r\n",
+    "        print(\" İsim : {} \\n Maaş : {} \\n Depratman : {} \\n\".format(self.isim,self.maas,self.departman))\r\n",
+    "\r\n",
+    "    def departmandegistir(self,yeni_departman):\r\n",
+    "        eski_departman = self.departman\r\n",
+    "        self.departman = yeni_departman\r\n",
+    "        print(\"{} olan departman bilgisi, {} olarak değiştirildi.\".format(eski_departman,yeni_departman))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "class Yonetici(Calisan):\r\n",
+    "    "
+   ],
    "outputs": [],
    "metadata": {}
   }
